--- a/02.CSS3/resources/css/13.style.css
+++ b/02.CSS3/resources/css/13.style.css
@@ -54,3 +54,17 @@
     left: 50px;
     z-index: 2;
 }
+
+.vis-test {
+    width: 100px;
+    height: 100px;
+}
+
+.float-test{
+    width: 70px;
+    height: 30px;
+    border: 1px solid;
+    float: right;
+    position: relative;
+    
+}
